# vulncontrol

./: .travis.yml  Cargo.toml  EXAMPLES.md  README.md  productlist.txt  products.txt  tests.sh  vendors.toml  vulncontrol.bash  vulncontrol.py
.github/workflows/: actions.yml  pythonapp.yml
old/: LICENSE copy.md  products.txt
src/: main.rs  main_bak.rs
