[package]

name = "cve-cli"
version = "0.1.0"
authors = [ "Amet13 <admin@amet13.name>" ]
description = "CLI tool for getting CVE details from cve.circl.lu"
edition = "2018"

[dependencies]

clap = "2.33"
ansi_term = "0.12"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
